--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "vue-test-package",
-  "version": "0.1.0",
-  "private": true,
+  "version": "0.0.1",
+  "main": "dist/vue-test-package.common.js",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "build:lib": "vue-cli-service build --target lib --name vue-test-package ./src/components/index.js",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
