--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue-ernie-test-package",
-  "version": "0.0.4",
-  "main": "dist/vue-ernie-test-package.common.js",
+  "version": "0.0.7",
+  "main": "src/components/index.js",
   "author": "ErnieLi <dy99520@gmail.com>",
   "scripts": {
     "serve": "vue-cli-service serve",
